fix related products scrollbar

--- a/assets/tailwind-input.css
+++ b/assets/tailwind-input.css
@@ -81,6 +81,17 @@
   .padding-x {
     @apply px-5;
   }
+
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+  .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+  }
+
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+  }
 }
 
 @layer components {
