--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1037,24 +1037,24 @@ body .shopify-policy__body {
   right: 0rem;
 }
 
-.right-3 {
-  right: 0.75rem;
-}
-
 .right-4 {
   right: 1rem;
+}
+
+.right-\[11px\] {
+  right: 11px;
 }
 
 .top-0 {
   top: 0rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
 .top-4 {
   top: 1rem;
+}
+
+.top-\[10px\] {
+  top: 10px;
 }
 
 .top-full {
@@ -1063,26 +1063,6 @@ body .shopify-policy__body {
 
 .top-header {
   top: var(--header-height);
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.right-\[0\.6875rem\] {
-  right: 0.6875rem;
-}
-
-.top-\[0\.625rem\] {
-  top: 0.625rem;
-}
-
-.right-\[11px\] {
-  right: 11px;
-}
-
-.top-\[10px\] {
-  top: 10px;
 }
 
 .isolate {
@@ -1168,10 +1148,6 @@ body .shopify-policy__body {
   margin-bottom: 1rem;
 }
 
-.-mb-5 {
-  margin-bottom: -1.25rem;
-}
-
 .-ml-gutter {
   margin-left: -10px;
 }
@@ -1186,10 +1162,6 @@ body .shopify-policy__body {
 
 .mb-25 {
   margin-bottom: 6.25rem;
-}
-
-.mb-50 {
-  margin-bottom: 12.5rem;
 }
 
 .mb-6 {
@@ -1240,10 +1212,6 @@ body .shopify-policy__body {
   margin-top: 0.75rem;
 }
 
-.mt-35 {
-  margin-top: 8.75rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1254,10 +1222,6 @@ body .shopify-policy__body {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
 }
 
 .mt-gutter {
@@ -1470,10 +1434,6 @@ body .shopify-policy__body {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
@@ -1561,12 +1521,6 @@ body .shopify-policy__body {
   margin-left: calc(10px * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-25 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(6.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(6.25rem * var(--tw-space-y-reverse));
-}
-
 .space-y-text-line > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1593,10 +1547,6 @@ body .shopify-policy__body {
 
 .whitespace-nowrap {
   white-space: nowrap;
-}
-
-.rounded-\[50\%\] {
-  border-radius: 50%;
 }
 
 .border {
@@ -1656,10 +1606,6 @@ body .shopify-policy__body {
   padding: 0.5rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -1693,10 +1639,6 @@ body .shopify-policy__body {
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pb-\[0\.375rem\] {
@@ -1874,6 +1816,21 @@ body .shopify-policy__body {
 .padding-x {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /*Typography*/
@@ -2181,10 +2138,6 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-end: 16;
   }
 
-  .md\:mb-0 {
-    margin-bottom: 0rem;
-  }
-
   .md\:mb-9 {
     margin-bottom: 2.25rem;
   }
@@ -2275,10 +2228,6 @@ body .shopify-pc__prefs__header-actions button {
   .md\:border-l-black {
     --tw-border-opacity: 1;
     border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0rem;
   }
 
   .md\:pb-1 {
